/*
 * $Id: ChangeLog,v 1.2585 2004/03/16 17:38:15 mlombardo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-16 22:29 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/Makefile
    ! removed dbdelim.prg not more nedded.
  * source/rtl/win32ole.prg
    ! disabled LONG LONG support to build with mingw32 and openwatcom w32 
  * source/rtl/filesys.c
    ! restored support for openwatcom w32
  * source/rdd/dbfcdx/dbfcdx1.c
    ! added casts for openwatcom w32
  These are simply hacks to finish the build. Real solutions are needed.

2004-03-16 14:35 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/odbc/odbc.c
    ! Fixed SQLEXECDIR() to support SQL commands containing a chr(0) byte
      inside strings

2004-03-16 23:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! optimized by removing usage of hb_itemNew(NULL)

2004-03-16 20:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/transform.c
    ! the length of get field expanded to the length of variable eventhough
      the picture clause the numeric picture clause is shorter that that.
      Example:
      .--
      |  local sget := space(10)
      |  @ 10,10 say "get" sget pict "999" // sget expanded to length of 10
      |                                    // it should be of 3 length
      `--
      This problem is fixed now.

2004-03-16 20:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    * Reveresed changes made on 15Mar04. MSVC was not accepting thee.

2004-03-16 15:40 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/dbinfo.ch
    + new DBORDERINFO() params: DBOI_SKIPWILD, DBOI_SKIPWILDBACK
      for poor index skipping index key doesn't match given
      pattern with wildcard characters (?*)
        cPattern:="*101*A"